--- a/index.html
+++ b/index.html
@@ -44,12 +44,24 @@
     <form action="#">
       <div class="form-group">
         <label for="name">Cardholder Name</label>
-        <input type="text" name="name" id="name">
+        <input type="text" name="name" id="name" placeholder="e.g. Jane Appleseed">
       </div>
       <div class="form-group">
         <label for="card-number">Card Number</label>
-        <input type="number" name="card-number" id="card-number">
+        <input type="number" name="card-number" id="card-number" placeholder="e.g. 1234 5678 9123 0000">
       </div>
+      <div class="form-group last">
+        <div class="exp-date">
+          <label for="date">Exp. Date (MM/YY)</label>
+          <input type="number" name="date" id="MM" placeholder="MM">
+          <input type="number" name="date" id="YY" placeholder="YY">
+        </div>
+        <div class="cvc2">
+          <label for="cvc">CVC</label>
+          <input type="number" name="cvc" id="cvc" placeholder="e.g. 123">
+        </div>
+      </div>
+      <input type="submit" value="Confirm">
     </form>
   </main>
 
