--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
         <div class="name_date">
           <p class="name">jane aplessed</p>
-          <span>00/00</span>
+          <div class="date">
+            <span>00</span>/<span>00</span>
+          </div>
         </div>
       </div>
     </div>
@@ -41,28 +43,40 @@
     </div>
   </div>
   <main class="content">
-    <form action="#">
+    <form action="#" id="form">
       <div class="form-group">
         <label for="name">Cardholder Name</label>
-        <input type="text" name="name" id="name" placeholder="e.g. Jane Appleseed">
+        <input type="text" name="name" id="name" placeholder="e.g. Jane Appleseed"  maxlength="20">
+        <span></span>
       </div>
       <div class="form-group">
         <label for="card-number">Card Number</label>
-        <input type="number" name="card-number" id="card-number" placeholder="e.g. 1234 5678 9123 0000">
+        <input type="text" name="card-number" id="card-number" placeholder="e.g. 1234 5678 9123 0000" minlength="16"  maxlength="19">
+        <span></span>
       </div>
       <div class="form-group last">
         <div class="exp-date">
           <label for="date">Exp. Date (MM/YY)</label>
-          <input type="number" name="date" id="MM" placeholder="MM">
-          <input type="number" name="date" id="YY" placeholder="YY">
+          <input type="text" name="date" id="MM" placeholder="MM" min="01" max="12"  maxlength="2">
+          <input type="text" name="date" id="YY" placeholder="YY" maxlength="2" min="23" max="99">
+          <span></span>
         </div>
         <div class="cvc2">
           <label for="cvc">CVC</label>
-          <input type="number" name="cvc" id="cvc" placeholder="e.g. 123">
+          <input type="text" name="cvc" id="cvc" placeholder="e.g. 123" maxlength="3" min="01" max="999">
+          <span></span>
         </div>
       </div>
-      <input type="submit" value="Confirm">
+      <input id="submit" type="submit" value="Confirm">
     </form>
+    <div class="modal">
+      <div class="icon-complete">
+        <img src="images/icon-complete.svg" alt="icon complete">
+      </div>
+      <h1>Thank you!</h1>
+      <p>We've added your card details</p>
+      <button type="button">Continue</button>
+    </div>
   </main>
 
   <!-- 0000 0000 0000 0000
@@ -96,5 +110,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="js/main.js"></script>
 </body>
 </html>
