solving problems in html

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
       </div>
       <div class="form-group last">
         <div class="exp-date">
-          <label for="date">Exp. Date (MM/YY)</label>
-          <input type="text" name="date" id="MM" placeholder="MM" min="01" max="12"  maxlength="2">
-          <input type="text" name="date" id="YY" placeholder="YY" maxlength="2" min="23" max="99">
+          <label for="MM">Exp. Date (MM/YY)</label>
+          <input type="text" name="date" id="MM" placeholder="MM" maxlength="2">
+          <input type="text" name="date" id="YY" placeholder="YY" maxlength="2">
           <span></span>
         </div>
         <div class="cvc2">
           <label for="cvc">CVC</label>
-          <input type="text" name="cvc" id="cvc" placeholder="e.g. 123" maxlength="3" min="01" max="999">
+          <input type="text" name="cvc" id="cvc" placeholder="e.g. 123" maxlength="3">
           <span></span>
         </div>
       </div>
